// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render views About 1`] = `
<div
  className="font-style center"
>
  <h1>
    About Us
  </h1>
  <p>
    Cultured Foodies is a website that encourages its users to discover new foods from different cultures. We want people to explore the world of food from our website and learn more about new cuisines and dishes.
  </p>
  <p>
    The data we've gathered highlights cuisines from various cultures and their known presence in news outlets.
  </p>
  <h2>
    Meet the Team
  </h2>
  <Container
    fluid={false}
  >
    <div
      className="row"
    >
      <div>
        Loading
      </div>
    </div>
  </Container>
  <Container
    fluid={false}
  >
    <div
      className="row"
    >
      <div>
        Loading
      </div>
    </div>
  </Container>
  <div>
    <h2>
      Stats
    </h2>
    <div>
      <h5>
        Total Commits: 
      </h5>
    </div>
    <div>
      <h5>
        Total Issues: 
      </h5>
    </div>
    <div>
      <h5>
        Total Tests: 
      </h5>
    </div>
  </div>
  <div>
    <h2>
      API's
    </h2>
  </div>
  <Container
    fluid={false}
  >
    <div
      className="row"
    >
      <InfoCard
        description="Used to retrieve country information"
        img="RestCountriesLogo.png"
        link="https://restcountries.eu/"
        title="REST Countries"
      />
      <InfoCard
        description="Used to find restaurant data."
        img="zomato.png"
        link="https://rapidapi.com/blog/how-to-use-zomato-api/"
        title="Zomato API"
      />
      <InfoCard
        description="Used to retrieve cuisine and dishes data."
        img="WorldFood.png"
        link="https://worldfood.guide/api/"
        title="WorldFood API"
      />
    </div>
    <div
      className="row"
    >
      <InfoCard
        description="Used to show the map location of a country"
        img="GoogleMapsLogo.jpeg"
        link="https://developers.google.com/maps/documentation/embed/get-started"
        title="The Maps Embed API"
      />
      <InfoCard
        description="Used to retrieve images of restaurants."
        img="GooglePlaceLogo.jpg"
        link="https://developers.google.com/maps/documentation/places/web-service/photos"
        title="Google Places Photos API"
      />
      <InfoCard
        description="Used to retrieve city data."
        img="teleportAPI.png"
        link="https://developers.teleport.org/api/"
        title="Teleport API"
      />
    </div>
  </Container>
  <div>
    <h2>
      Tools
    </h2>
  </div>
  <Container
    fluid={false}
  >
    <div
      className="row"
    >
      <InfoCard
        description="Cloud hosting platform"
        img="AWSLogo.png"
        link="https://aws.amazon.com/"
        title="AWS"
      />
      <InfoCard
        description="GitLab Repository and CI/CD platform"
        img="GitLabLogo.png"
        link="https://gitlab.com/"
        title="GitLab"
      />
      <InfoCard
        description="API and streamline collaboration platform"
        img="PostmanLogo.png"
        link="https://www.postman.com/"
        title="Postman"
      />
    </div>
    <div
      className="row"
    >
      <InfoCard
        description="A JavaScript library for building user interfaces"
        img="ReactLogo.png"
        link="https://reactjs.org/"
        title="React"
      />
      <InfoCard
        description="A free and open-source CSS framework directed at responsive, mobile-first front-end web development"
        img="BootstrapLogo.png"
        link="https://getbootstrap.com/"
        title="BootStrap"
      />
      <InfoCard
        description="Domain name registrar"
        img="Namecheap.png"
        link="https://www.namecheap.com/"
        title="NameCheap"
      />
    </div>
    <div
      className="row"
    >
      <InfoCard
        description="Open-source relational database management system."
        img="PostgreSQL.png"
        link="https://postgresql.org"
        title="PostgreSQL"
      />
    </div>
  </Container>
  <div>
    <h2>
      Our Data
    </h2>
  </div>
  <Container
    fluid={false}
  >
    <div
      className="row justify-content-center"
    >
      <InfoCard
        img="GitLabLogo.png"
        link="https://gitlab.com/cs373-group-11/cultured-foodies"
        title="Gitlab Repo"
      />
      <InfoCard
        img="PostmanLogo.png"
        link="https://documenter.getpostman.com/view/14712963/Tz5jczL8"
        title="Postman API"
      />
    </div>
  </Container>
</div>
`;

exports[`Render views Cities 1`] = `
<div>
  <h1
    className="text-align center"
  >
    Cities
  </h1>
  <Container
    fluid={false}
  />
  <WithStyles(ForwardRef(Pagination))
    count={0}
    onChange={[Function]}
    page={0}
  />
</div>
`;

exports[`Render views Cuisines 1`] = `
<div>
  <h1
    className="text-align center"
  >
    Cuisines
  </h1>
  <Container
    fluid={false}
  />
  <WithStyles(ForwardRef(Pagination))
    count={0}
    onChange={[Function]}
    page={1}
  />
</div>
`;

exports[`Render views Restaurants 1`] = `
<div>
  <h1
    className="text-align center"
  >
    Restaurants
  </h1>
  <ForwardRef
    className="table"
    responsive={true}
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          City
        </th>
        <th>
          Rating
        </th>
        <th>
          Price Range
        </th>
        <th>
          Average Cost for Two
        </th>
      </tr>
    </thead>
    <tbody />
  </ForwardRef>
  <WithStyles(ForwardRef(Pagination))
    count={0}
    onChange={[Function]}
    page={0}
  />
</div>
`;

exports[`Render views Splash Page 1`] = `
<div>
  <body
    className="Home"
    data-background="homephoto.jpg"
    id="mybody"
  >
    <header
      className="Home-header"
    >
      <div
        className="Title-summary"
      >
        Welcome fellow Foodie!
        <div
          className="summary"
        >
          Whether you are looking for cultural dishes
          <br />
          around the world, country information, dishes 
          <br />
          or global news, Cultured Foodies 
          <br />
          can help you find what you're looking for!
          <br />
        </div>
      </div>
    </header>
  </body>
</div>
`;
